[tool.poetry]
name = "runnertracker"
version = "0.1.0"
description = "A simple API to track runners in a Marathon."
authors = ["Victor Martinez <vcrmartinez@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
cchardet = "^2.1.7"
motor = "^2.5.0"
aioredis = "^2.0.0"
marshmallow = "^3.13.0"
PyJWT = "^2.1.0"
python-decouple = "^3.4"
uvicorn = "^0.15.0"
ipython = "^7.26.0"
structlog = "^21.1.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
